RESOLVED FIXED107293
[BlackBerry] fix compile warnings in NetworkJob
https://bugs.webkit.org/show_bug.cgi?id=107293
Summary [BlackBerry] fix compile warnings in NetworkJob
Joe Mason
Reported 2013-01-18 09:10:51 PST
A recent commit introduced some compile warnings. We should compile cleanly.
Attachments
fix (2.21 KB, patch)
2013-01-18 09:14 PST, Joe Mason
no flags
Joe Mason
Comment 1 2013-01-18 09:14:46 PST
Yong Li
Comment 2 2013-01-18 09:17:58 PST
Comment on attachment 183478 [details] fix View in context: https://bugs.webkit.org/attachment.cgi?id=183478&action=review > Source/WebCore/platform/network/blackberry/NetworkJob.cpp:75 > + for (size_t i = 0; i < sizeof(appendableHeaders) /sizeof(char*); i++) Minor: ++i is prefered
WebKit Review Bot
Comment 3 2013-01-18 09:53:11 PST
Comment on attachment 183478 [details] fix Clearing flags on attachment: 183478 Committed r140168: <http://trac.webkit.org/changeset/140168>
WebKit Review Bot
Comment 4 2013-01-18 09:53:13 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.