[BlackBerry] fix compile warnings in NetworkJob https://bugs.webkit.org/show_bug.cgi?id=107293

Patch by Joe Mason <jmason@rim.com> on 2013-01-18
Reviewed by Yong Li.

Internal PR: 283096

* platform/network/blackberry/NetworkJob.cpp:
(WebCore):
(WebCore::isAppendableHeader):

Canonical link: https://commits.webkit.org/125529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140168 268f45cc-cd09-0410-ab3c-d52691b4dbfc